--- a/new website/login form/login.html
+++ b/new website/login form/login.html
@@ -19,7 +19,7 @@
         <span>Password</span>
         <input type="password" name="password">
       </label>
-      <button class="submit" type="button">Sign In</button>
+      <input class="submit" type="button">Sign In</input>
       <p class="forgot-pass">Forgot Password ?</p>
 
       <div class="social-media">
@@ -65,7 +65,7 @@
           <span>Confirm Password</span>
           <input type="password">
         </label>
-        <button type="button" class="submit">Sign Up Now</button>
+        <input type="button" class="submit">Sign Up Now</input>
       </div>
     </div>
   </div>
